fix `improve-this-page` box cut off

--- a/assets/scss/components/card-box.scss
+++ b/assets/scss/components/card-box.scss
@@ -57,6 +57,10 @@
     }
   }
 
+  &.-p-tiny {
+    padding: $spacing-tiny;
+  }
+
   > .content {
     padding: $spacing-tiny;
     z-index: 2;
